# hailo-media-library

./: DeployAll.sh  dsp_letterbox.patch
api/: meson.build
api/examples/native_custom/: README.md  frontend_encoder_sink0.json  frontend_encoder_sink1.json  frontend_native_config_example.json  main.cpp  user_stages.hpp
api/examples/native_custom/Others/: ObjectDetectClassToString.hpp
api/examples/native_custom/Resources/Image/: ApplicationPipeline.excalidraw  DataComposition.excalidraw  InfrastructurePipeline.excalidraw
api/examples/native_custom/infra/: base.hpp  dsp_stages.hpp  hailort_stage.hpp  metadata.hpp
api/include/Utils/hailo-common/: hailo_common.hpp  hailo_objects.hpp
api/include/Utils/yolo-nms-decoder/: yolo_nms_decoder.hpp  yolov5_face_decoder.hpp
api/include/draw/: H15Draw.hpp
api/include/resize_crop/: H15DspResizeCrop.hpp
api/include/streaming/: H15Common.hpp  H15Streaming.hpp
api/src/resize_crop/: H15DspResizeCrop.cpp
api/src/streaming/: H15Streaming.cpp
media_library/include/media_library/: dsp_utils.hpp
media_library/src/dsp/: dsp_utils.cpp
